<resources>
    <string name="app_name">StarWarsApp</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="birth">Y.O.B</string>
    <string name="eye_color">Eye Color</string>
    <string name="hair_color">Hair Color</string>
    <string name="height">Height</string>
    <string name="mass">Mass</string>
    <string name="skin_color">Skin Color</string>
    <string name="homeworld">Homeworld</string>
    <string name="films">Films</string>
    <string name="species">Species</string>
    <string name="vehicles">Vehicles</string>
    <string name="starships">Starships</string>


</resources>
